<resources>
    <string name="app_name">SynergyFieldEngineer</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_visits">Visits</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="default_email">email</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="logout_msg">Do you really want to logout?</string>
    <string name="menu_location">Add Location</string>
    <string name="exit_msg">Do you really want to exit from from app?</string>
    <string name="hint_occu">Occupancy Status</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="person_met_name">Name of Person Met At Site</string>
    <string name="person_met_contact">Contact of person met at Site</string>
    <string name="property_no">Property No</string>
    <string name="floor_no">Floor No</string>
    <string name="slabs">No of slabs completed</string>
</resources>
